# SQL-Debugger

./: .gitignore  Dockerfile  inference.py  pyproject.toml
my_env/: .dockerignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  run_all_tasks_with_client.py  run_all_tasks_with_http.py  run_reward_demo.py  run_task_eval.py
my_env/server/: __init__.py  app.py  grader.py  tasks.py  your_environment.py
server/: __init__.py  app.py
